Fix OOM exception in android-sdk-gradle-test
Summary: `android-sdk-gradle-test` often fails recently. This diff increases the memory limit for test in gradle settings so that it can finish successfully.

Reviewed By: jingping2015

Differential Revision: D26694762

fbshipit-source-id: d14478cacf60af8aa3f821dfa8ba6a0fdd7c0033